# pwmanager

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLOUD_SYNC.md  CONTRIBUTING.md  Dockerfile  README (1).md  README.md  SECURITY.md  pwmanager.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pwmanager/: __init__.py  __main__.py  audit.py  cli.py  colors.py  constants.py  crypto.py  generators.py  hibp.py  importers.py  models.py  profiles.py  totp.py  vault.py
pwmanager/data/: __init__.py  eff_short.txt
tests/: __init__.py  test_add_gen.py  test_audit.py  test_crypto.py  test_export_csv.py  test_favorites.py  test_fuzzy.py  test_generators.py  test_hibp.py  test_history.py  test_importers.py  test_notes.py  test_profiles.py  test_pwmanager.py  test_round4_v23.py  test_stats.py  test_totp.py  test_vault.py
