[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pwmanager"
version = "2.2.0"
description = "Advanced local, encrypted password manager — Argon2id + Fernet, TOTP, SQLite or JSON vault"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sebby1770" }]
keywords = ["password-manager", "encryption", "argon2", "totp", "cli", "security"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
]
dependencies = ["cryptography>=42.0.0"]

[project.optional-dependencies]
# Argon2id key derivation (recommended) and clipboard support are optional;
# the tool degrades gracefully to PBKDF2 / no-clipboard without them.
argon2 = ["argon2-cffi>=23.1.0"]
clipboard = ["pyperclip>=1.8.2"]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
pwmanager = "pwmanager:main"

[tool.setuptools]
py-modules = ["pwmanager"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# The codebase deliberately uses compact one-liners (`print(...); return`).
# Keep the pyflakes (F) checks that catch real bugs; drop the two cosmetic
# compound-statement rules.
ignore = ["E701", "E702"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
